--- a/application/flask_blog/templates/layout.html
+++ b/application/flask_blog/templates/layout.html
@@ -26,6 +26,9 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('new_entry') }}">新規作成</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('logout') }}">ログアウト</a>
                     </li>
                     {% endif %}
